syntax = "proto3";
// import "google/protobuf/field_mask.proto";
package HS.Protobuf.DBProxy.DBTask;

enum DBTaskProtocl{
	DBTASK_PROTOCL_NONE = 0;
}

message DBTaskNode{
	int32 taskId			= 1;
	int32 state				= 2;
	string taskProgress		= 3;		// 当前任务进度
	int64 startTime			= 4;
	int64 endTime			= 5;
}
